--- a/snake_game.vcxproj
+++ b/snake_game.vcxproj
@@ -151,6 +151,9 @@
   <ItemGroup>
     <ClInclude Include="ConnectionIii-Rj3W.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
